# deicide

./: .gitignore  README.md  pyproject.toml
src/deicide/: __init__.py  __main__.py  clustering.py  core.py  corpus.py  db.py  deicide.py  dendro.py  dendrogram.py  dv8.py  gri.py  ilp.py  jdeo.py  kielaclark.py  loading.py  lsi.py  mututal_knn.py  naming.py  semantic.py  stop_words.json  validation2.py
src/deicide/algorithms/: akash19.py  alzahrani20.py  core.py  hac.py
src/deicide/queries/: _prelude.sql  fetch_candidate_files.sql  fetch_candidate_files2.sql  fetch_children.sql  fetch_client_deps.sql  fetch_clients.sql  fetch_entities_by_name.sql  fetch_internal_deps.sql  fetch_touches.sql  fetch_versions.sql
src/notebooks/: Example.ipynb  Percentile.ipynb  PrimaryExp.ipynb  PrimaryExp2.ipynb  _cacheutil.py
