[project]
name = "deicide"
version = "0.1.0"
description = "Split large source files"
authors = [
    { name = "Jason Lefever", email = "jason.titus.lefever@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "ordered-set>=4.1.0",
    "openpyxl>=3.1.2",
    "nltk>=3.8.1",
    "tabulate>=0.9.0",
    "ortools>=9.7.2996",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
deicide = "deicide.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
