[project]
name = "deicide"
version = "0.1.0"
description = "Split large source files"
readme = "README.md"
authors = [
    { name = "Jason Lefever", email = "jason.titus.lefever@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "ortools>=9.14.6206",
]

[project.scripts]
deicide = "deicide:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
