[project]
name = "deicide"
version = "0.1.0"
description = "Split large source files"
readme = "README.md"
authors = [
    { name = "Jason Lefever", email = "jason.titus.lefever@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "nltk>=3.9.1",
    "ortools>=9.14.6206",
    "numpy>=2.3.2",
    "ordered-set>=4.1.0",
]

[project.scripts]
deicide = "deicide:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
